# maestro-runner

./: .gitignore  .golangci.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  go.mod  go.sum  llms.txt
.github/agents/: docs-agent.md
.github/skills/git-commit/: SKILL.md
.github/skills/go-test-runner/: SKILL.md
.github/skills/merge-upstream/: SKILL.md
.github/skills/python-test-runner/: SKILL.md
.github/skills/typescript-test-runner/: SKILL.md
.github/workflows/: ci.yml  e2e-android-python.yml  e2e-android-typescript.yml  e2e-android-yaml.yml  e2e-android.yml  unit-tests.yml
client/python/: .gitignore  DEVELOPER.md  README.md  pyproject.toml
client/python/maestro_runner/: __init__.py  client.py  commands.py  exceptions.py  models.py
client/python/tests/: conftest.py  report-overrides.css  test_add_contact.py  test_add_contact_ios.py  test_client.py  test_contact_persists.py  test_e2e_android.py  test_models.py  test_wait_for_animation_never_ends.py  test_wait_for_animation_to_end.py
client/python/tests/pages/: __init__.py  contact_list_page.py  edit_contact_page.py  ios_contact_list_page.py  ios_edit_contact_page.py
client/typescript/: .gitignore  README.md  eslint.config.mjs  jest.config.js  package-lock.json  package.json  tsconfig.json
client/typescript/src/: client.ts  commands.ts  exceptions.ts  index.ts  models.ts
client/typescript/tests/: setup.ts  test_add_contact.test.ts  test_add_contact_ios.test.ts  test_client.unit.test.ts  test_contact_persists.device.test.ts  test_e2e_android.device.test.ts  test_models.unit.test.ts  (+2 more)
drivers/android/: devicelab-android-driver.apk
examples/web/: auth-state.yaml  browser-cookies.yaml  browser-script.yaml  file-upload-download.yaml  parallel-browsers.yaml  permissions.yaml
pkg/cli/: android.go  cli.go  cli_test.go  ios.go  test.go  web.go
pkg/core/: element.go  point.go  point_test.go
pkg/device/: android.go  android_test.go  devicelab_driver.go  uiautomator.go
pkg/emulator/: android_test.go
pkg/executor/: flow_runner.go  scripting_test.go
pkg/flow/: json.go  parser.go  parser_test.go  step.go  step_test.go
pkg/flutter/: discovery.go  discovery_iossim.go  discovery_iossim_test.go  discovery_test.go  semantics.go  vmservice.go  widgettree.go  wrapper.go  wrapper_test.go
pkg/maestro/: events.go
prompt/: plan.md
(+58 files in other folders)
