[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maestro-runner"
version = "0.1.0"
description = "Python client for maestro-runner REST API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-xdist>=3.0",
    "requests-mock>=1.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
