[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["maestro_runner*"]

[project]
name = "maestro-runner"
version = "0.1.0"
description = "Python client for maestro-runner REST API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-html>=4.0",
    "pytest-xdist>=3.0",
    "requests-mock>=1.11",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "types-requests>=2.31",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--html=reports/report.html --self-contained-html --junitxml=reports/junit-report.xml"
log_cli = true
log_cli_level = "DEBUG"
log_level = "DEBUG"
log_date_format = "%Y-%m-%d %H:%M:%S"

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["maestro_runner", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit (security)
    "RUF", # ruff-specific rules
]
ignore = [
    "S101", # allow assert in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "S113"]
"tests/conftest.py" = ["S101", "S105", "S106", "S113", "S603", "S607", "E501"]
"tests/test_wait_for_animation_to_end.py" = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
